-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.9.3, 5.10.0
-
Fix Version/s: 5.13.0 Alpha 1
-
Component/s: SQL Support
-
Labels:None
-
Commits:461ef575bcf778ba24b0be6b775098d4b80ae5e1
With PostgreSQL, if queries use the same table identifier with different cases, or it is escaped with quotes around the table name then it can cause problems with case sensitivity. Therefore, tables should always be escaped with quotes when the driver allows it to ensure that it is able to execute the queries correctly inside the model classes.