tests/auto/sql/kernel/qsqlquery/tst_qsqlquery.cpp
@@ -1096,7 +1096,7 @@ void tst_QSqlQuery::record()
     for (int i = 0; i < 3; ++i)
         QCOMPARE(q.record().field(i).tableName().toLower(), lowerQTest);
     q.clear();
-    const auto tst_record = qTableName("tst_record", __FILE__, db).toLower();
+    const auto tst_record = qTableName("tst_record", __FILE__, db, false).toLower();
     SETUP_RECORD_TABLE;
     CHECK_RECORD;
     q.clear();
@@ -3742,15 +3742,13 @@ void tst_QSqlQuery::QTBUG_5251()
     const QString timetest(qTableName("timetest", __FILE__, db));
     tst_Databases::safeDropTable(db, timetest);
     QSqlQuery q(db);
-    QVERIFY_SQL(q, exec(QStringLiteral("CREATE TABLE \"") + timetest + QStringLiteral("\" (t TIME)")));
-    QVERIFY_SQL(q, exec(QStringLiteral("INSERT INTO \"") + timetest +
-                        QStringLiteral("\" VALUES ('1:2:3.666')")));
+    QVERIFY_SQL(q, exec(QStringLiteral("CREATE TABLE ") + timetest + QStringLiteral(" (t TIME)")));
+    QVERIFY_SQL(q, exec(QStringLiteral("INSERT INTO ") + timetest +
+                        QStringLiteral(" VALUES ('1:2:3.666')")));
 
     QSqlTableModel timetestModel(0,db);
     timetestModel.setEditStrategy(QSqlTableModel::OnManualSubmit);
     timetestModel.setTable(timetest);
-    if (tst_Databases::getDatabaseType(db) == QSqlDriver::PostgreSQL)
-        QEXPECT_FAIL("", "Currently broken for PostgreSQL due to case sensitivity problems - see QTBUG-65788", Abort);
     QVERIFY_SQL(timetestModel, select());
 
     QCOMPARE(timetestModel.record(0).field(0).value().toTime().toString("HH:mm:ss.zzz"), QString("01:02:03.666"));
@@ -3759,8 +3757,8 @@ void tst_QSqlQuery::QTBUG_5251()
     QVERIFY_SQL(timetestModel, submitAll());
     QCOMPARE(timetestModel.record(0).field(0).value().toTime().toString("HH:mm:ss.zzz"), QString("00:12:34.500"));
 
-    QVERIFY_SQL(q, exec(QStringLiteral("UPDATE \"") + timetest +
-                        QStringLiteral("\" SET t = '0:11:22.33'")));
+    QVERIFY_SQL(q, exec(QStringLiteral("UPDATE ") + timetest +
+                        QStringLiteral(" SET t = '0:11:22.33'")));
     QVERIFY_SQL(timetestModel, select());
     QCOMPARE(timetestModel.record(0).field(0).value().toTime().toString("HH:mm:ss.zzz"), QString("00:11:22.330"));
 
